# MocapAPI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
MocapApi Python Demo/: CalcDemo.py  说明.txt
include/: MocapApi.h
script/: MocapAPI.py  defines.py
